# project-base

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.rst  docker-compose.yml  install-packages.sh  mypy.ini  pyproject.toml
compose/: Dockerfile  entrypoint  start
compose/local/django/: Dockerfile
compose/production/traefik/: traefik.toml
envs/: docker.env  local.env
locale/en_GB/LC_MESSAGES/: messages.po
locale/es_ES/LC_MESSAGES/: messages.po
src/: main.py  translations.py
src/composite_root/: bootstrapper.py  container.py  graphql.py
src/config/: settings.py
src/config/django/: __init__.py  base.py  local.py
src/contexts/auth/: binding_specs.py
src/contexts/auth/core/: authenticator.py  domain.py  interfaces.py  login_handlers.py
src/contexts/auth/infrastructure/: jwt.py  secret_providers.py
src/contexts/auth/infrastructure/api/: endpoints.py
src/contexts/auth/infrastructure/graphql/: context.py  mutations.py
src/contexts/auth/infrastructure/persistence/: repo.py
src/contexts/sample/: binding_specs.py
src/contexts/sample/core/commands/: sample.py
src/contexts/sample/core/domain/: domain.py  interfaces.py  validator.py
src/contexts/sample/core/queries/: sample.py
src/contexts/sample/infrastructure/api/: dtos.py  entrypoints.py
src/contexts/sample/infrastructure/cache/: cache_repo.py
src/contexts/sample/infrastructure/graphql/: mutations.py  queries.py  shared.py
src/contexts/sample/infrastructure/mongo_persistence/: repo.py  session.py  uow.py
src/contexts/shared/: anyio.py  cache.py  command_bus.py  exceptions.py  interfaces.py  message.py  typing.py  uow.py
tests/: conftest.py  test_api_mongo.py  test_cached_repository.py
tests/integration/: conftest.py  stubs.py  test_api_mongo.py  test_mongo_game_repository.py
tests/unit/: test_sample.py
